--- a/src/styles.css
+++ b/src/styles.css
@@ -23,6 +23,102 @@ a img{
   border: 0px;
 }
 
+p {
+  color: blue;
+  margin-top: 20px;
+  width: inherit;
+}
+
+.md-button {
+  display: inline-block;
+  position: relative;
+  cursor: pointer;
+  min-height: 36px;
+  min-width: 88px;
+  line-height: 36px;
+  vertical-align: middle;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-grid-row-align: center;
+  align-items: center;
+  text-align: center;
+  border-radius: 3px;
+  box-sizing: border-box;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  border: 0;
+  padding: 0 6px;
+  margin: 6px 8px;
+  background: transparent;
+  color: currentColor;
+  white-space: nowrap;
+  text-transform: uppercase;
+  font-weight: 500;
+  font-size: 14px;
+  font-style: inherit;
+  font-variant: inherit;
+  font-family: inherit;
+  text-decoration: none;
+  overflow: hidden;
+  -webkit-transition: box-shadow .4s cubic-bezier(.25,.8,.25,1),background-color .4s cubic-bezier(.25,.8,.25,1);
+  transition: box-shadow .4s cubic-bezier(.25,.8,.25,1),background-color .4s cubic-bezier(.25,.8,.25,1);
+}
+
+div#loader {
+  max-width: 200px;
+  border: 1px solid green;
+  color: white;
+  background-color: rgba(0, 153, 0, 0.71);
+  text-align: center;
+  z-index: 10;
+  position: absolute;
+  padding: 5px;
+  top: 80px;
+}
+
+.btn1 {
+  color: rgba(255,255,255,0.87);
+  background-color: rgb(20, 20, 20);
+  font-family: Arial;
+  width: 255px;
+  font-weight: bold;
+}
+s
+.btn1:not([disabled]):hover {
+  background-color: rgba(107, 103, 91, 0.96);
+  color: white;
+}
+
+md-toolbar.md-hue-2:not(.md-menu-toolbar) {
+  background-color: rgb(1,74,182);
+  color: rgba(255,255,255,0.87);
+}
+
+
+.hero-image {
+  text-align: center;
+  background-color: #fafafa;
+}
+
+.hero-image p {
+  position: relative;
+}
+
+.cmd-top-product {
+  overflow-y: auto;
+  max-width: 800px;
+  max-height: 100px;
+}
+
+.cmd-top-item {
+  width: 100px;
+  height: 100px;
+  background-color: red;
+}
+    
+
 ::-moz-selection {
   background-color: #6ab344;
   color: #fff;
